--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
+    "firebase": "^11.10.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.2",
@@ -17,6 +19,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -31,6 +34,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "gh-pages": "^6.3.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
     "typescript": "~4.5.5"
